--- a/kalkulator.and/style/style.css
+++ b/kalkulator.and/style/style.css
@@ -1,5 +1,5 @@
 .but {
-    width: 10%;
+    width: 20%;
     height: 400%;
 }
 
@@ -10,10 +10,6 @@ hr {
 
 .up {
     font-size: 300%;
-}
-
-.d {
-    font-size: 340%;
 }
 
 body {
@@ -31,6 +27,6 @@ a:hover {
     text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.65);
 }
 
-.b0, .br, .bplu{
+.b0, .br, .bplu, .bc{
     font-size: 398%;
 }
